--- a/styles/styles.css
+++ b/styles/styles.css
@@ -331,7 +331,7 @@ body.red-theme {
 }
 
 body.blue-theme {
-  --main-accent-color: #2563EB;   /* Modern Bright Blue */
+  --main-accent-color: #002d72;   /* Medline Blue */
   --link-hover-color: #3B82F6;    /* Lighter Sky Blue */
 }
 
